k8s/06-mongodb-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: mongodb-service
  namespace: easyshop

spec:
  selector:
    app: mongodb
  ports:
  - port: 27017
    targetPort: 27017
