k8s/09-easyshop-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: easyshop-service
  namespace: easyshop

spec:
  type: NodePort
  selector:
    app: easyshop
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 30000
